--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aurelia-return-delegate",
+  "name": "aurelia-return-trigger",
   "version": "0.0.1",
-  "description": "An Aurelia plugin to simply bind a delegate",
+  "description": "An Aurelia plugin to simply trigger a \"return\" event on return keypress",
   "keywords": [
     "aurelia"
   ],
